--- a/css/styles.css
+++ b/css/styles.css
@@ -433,6 +433,9 @@ main {
     justify-content: center;
     z-index: 1000;
 }
+.modal[hidden] {
+    display: none !important;
+}
 
 .modal-content {
     background: var(--bg-color);
