--- a/css/menu-editor.css
+++ b/css/menu-editor.css
@@ -29,12 +29,13 @@
 .save-status {
     position: sticky;
     top: 0;
-    background: var(--info-color);
+    background: #855508;
     color: white;
     padding: var(--spacing-sm) var(--spacing-xl);
     text-align: center;
     z-index: 100;
     font-weight: 500;
+    width:100%;
 }
 
 /* Form Styles */
@@ -72,6 +73,7 @@ label {
     display: block;
     font-weight: 600;
     margin-bottom: var(--spacing-xs);
+    color: var(--text-color);
 }
 
 label.required::after {
